syntax="proto3";

option go_package = "/proto";

/**
 * Unresolved event that has been decoded by
 * an event source.
 */
message PUnresolvedEvent {
    string source_id = 1;
    optional string alt_id = 2;
    string device = 3;
    optional string assignment = 4;
    optional string customer = 5;
    optional string area = 6;
    optional string asset = 7;
    string occurred_time = 8;
    string processed_time = 9;
    int64 event_type = 10;
    bytes payload = 12;
}

/**
 * Payload for a location event.
 */
message PLocationPayload {
    optional string latitude = 1;
    optional string longitude = 2;
    optional string elevation = 3;
}